<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="service_base_url">https://192.168.1.5:8443/advogadope-web/services</string>
    <string name="app_name">e-Advogado</string>
    <string name="prefs_category_conta">Conta do Usuário</string>
    <string name="main_msg_1">O aplicativo e-Advogado possibilita efetuar de forma simples, a consulta de processos judiciais, em todos os tribunais que utilizem o sistema PJ-e..</string>
    <string name="main_msg_2">Acesse uma das opções:</string>
    <string name="menu_meus_processos">Meus Processos</string>
    <string name="menu_consultar_processos">Consultar Processos</string>
    <string name="menu_minha_conta">Minha Conta</string>
    <string name="menu_preferences">Preferências</string>
    <string name="preferences_title">Preferências</string>
    <string name="pref_conta_usuario">Conta de Usuário</string>
    <string name="pref_conta_usuario_summary">Configurações da conta de usuário utilizada na aplicação.</string>
    <string name="pref_conta_usuario_email">E-mail</string>
    <string name="pref_conta_usuario_email_msg">Informe o e-mail de acesso ao serviço.</string>
    <string name="pref_conta_usuario_senha">Senha</string>
    <string name="pref_conta_usuario_senha_msg">Informe sua senha de acesso ao serviço.</string>

    <string-array name="menu_itens">
        <item>@string/menu_meus_processos</item>
        <item>@string/menu_consultar_processos</item>
        <item>@string/menu_minha_conta</item>
        <item>@string/menu_preferences</item>
    </string-array>

    <string name="criar_conta">Cadastro</string>
    <string name="termos_de_uso_titulo">Termos de Uso</string>
    <string name="term_de_uso_1">Este documento contém os termos de uso do aplicativo e-Advogado, cuja aceitação plena e integral é requisito para todos os seus usuários. Ele inclui, os termos gerais, os termos de limitação de responsabilidade, a política de privacidade e confidencialidade, a licença de uso, e as informações sobre como reportar violações.</string>
    <string name="term_de_uso_2">O cadastro no e-Advogado implica no reconhecimento e na plena aceitação dos termos a seguir.</string>
    <string name="term_do_objeto">Do objeto</string>
    <string name="term_do_objeto_1">O objeto destes Termos de Uso é o aplicativo e-Advogado, que possibilita efetuar de forma simples, a consulta e o acompanhamento de processos judiciais, on-line.</string>
    <string name="term_limit_e_resp">Limitação de responsabilidade</string>
    <string name="term_limit_e_resp_desc_1">Os dados apresentados neste aplicativo são obtidos diretamente das consultas públicas disponibilizadas pelos Tribunais, podendo sua veracidade ser verificada no site de cada tribunal, por meio das consultas públicas cidatas anteriormente. Destaca-se, porém, que os dados apresentados pelo e-Advogado são apenas para fins de consulta, não devendo ser caracterizado como qualquer instrumento de prova.</string>
    <string name="term_limit_e_resp_desc_2">Será atribuído ao usuário toda e qualquer responsabilidade, de caráter civil e/ou criminal, pelo uso inadequado das informações presentes.</string>
    <string name="term_limit_e_resp_desc_3">Em nenhuma situação o e-Advogado, seus autores, editores ou mantenedores serão responsáveis por quaisquer danos, prejuízos ou outro efeito, direto ou indireto, relacionados ao uso, por parte de seus usuários ou de qualquer outra pessoa, deste aplicativo, de seu conteúdo ou de qualquer outro aqui mencionado.</string>
    <string name="term_limit_e_resp_desc_4">Em especial, o e-Advogado não classifica nem analisa o conteúdo que seus usuários acrescentam, conforme exposto nestes Termos de Uso, no item “Licença de uso do conteúdo”, abaixo.</string>
    <string name="term_polit_e_conf">Política de privacidade e confidencialidade</string>
    <string name="term_polit_e_conf_1">O e-Advogado se compromete a não monitorar, editar, acessar ou divulgar informações privativas de seus usuários.</string>
    <string name="term_polit_e_conf_2">Todos os dados trafegados pelo e-Advogado entre o dispositivo e o servidor, são realizados por meio de um canal seguro (HTTPS).</string>
    <string name="term_licenca_de_uso">Licença de uso</string>
    <string name="term_licenca_de_uso_1">O usuário do e-Advogado detém apenas uma licença de uso do software, não caracterizando qualquer propriedade sobre aplicativo. O aplicativo e-Advogado poderá ser atualizado ou extinquido à critério do autor deste software.</string>
    <string name="term_inexistencia">Inexistência de vínculo</string>
    <string name="term_inexistencia_1">Estes Termos de Uso não geram a criação de qualquer vínculo trabalhista, societário, de parceria ou associativo entre o usuário e o e-Advogado, sendo excluídas quaisquer presunções de solidariedade entre ambos no cumprimento de suas obrigações.</string>
    <string name="term_disposicoes_finais">Disposições finais</string>
    <string name="term_disposicoes_finais_1">Estas condições gerais serão regidas e interpretadas de acordo com a legislação brasileira. Fica eleito o Foro da Comarca de Recife, Estado de Pernambuco, para dirimir questões relativas a estas condições gerais, com renúncia expressa a qualquer outro. Estes Termos de Uso podem ser modificados pelo e-Advogado, e as modificações terão efeito a partir da data de sua publicação no aplicativo e/ou website, mediante a sua comunicação em local que seja de fácil identificação para o usuário.</string>
    <string name="title_activity_termos_de_uso">Termos de Uso</string>
    <string name="action_settings">Settings</string>
    <string name="btn_termos_aceito">Aceito</string>
    <string name="btn_sim">Sim</string>
    <string name="btn_nao">Não</string>
    <string name="msg_op_incluir_atingiu_max_versao_gratis">Para incluir mais processos, adquira a versão PREMIUM do aplicativo e-Advogado!</string>
    <string name="msg_op_incluir_processo_disponivel_versao_paga">Acompanhamento de processos está disponível somente na versão e-Advogado PRO</string>
    <string name="msg_erro_operacao_nao_realizada">Desculpe! Não foi possível executar a operação neste momento.</string>
    <string name="msg_erro_comunicacao_op_nao_realizada">Não foi possível executar a operação. Verifique seu acesso a internet!</string>
    <string name="msg_erro_inesperado">Desculpe! Ocorreu um erro inesperado!</string>
    <string name="msg_processo_nao_encontrado">O processo informado não foi encontrado!</string>
    <string name="msg_nenhum_processo_cadastrado">Você ainda não possui processos em acompanhamento!</string>
    <string name="msg_tipo_documento_nao_suportado">No momento, este tipo de documento ainda não é suportado.</string>
    <string name="msg_erro_salvando_arquivo">Não foi possível salvar o arquivo. Favor verificar seu cartão de memória e espaço disponível!</string>
    <string name="msg_email_nova_senha">Atenção! Foi enviada uma nova senha para seu e-mail. Verifique e tente novamente.</string>
    <string name="msg_avaliacao_app">Olá! Faça a avaliação do nosso aplicativo e ajude-nos a melhorá-lo. Deseja avaliar agora?</string>
    <string name="title_activity_minha_conta">Minha Conta</string>
    <string name="hello_world">Hello world!</string>
    <string name="msg_minha_conta">Aqui você pode verificar as informações sobre sua conta.</string>
    <string name="conta_categoria">Categoria da Conta:</string>
    <string name="conta_saldo_processos">Processos</string>
    <string name="conta_qtde_cadastrada">"Qtde. Cadastrada: "</string>
    <string name="conta_qtde_disponivel">Qtde. Disponível:</string>
    <string name="conta_btn_conta_premium">Conta Premium</string>
    <string name="conta_btn_comprar_pacote">Comprar Pacote</string>
    <string name="conta_erro_carregando_dados">Não foi possível carregar os dados da conta! Verifique o acesso a internet.</string>
    <string name="conta_erro_carregando_dados_nao_autorizado">Não foi possível autenticar seu usuário! Verifique suas credenciais de acesso.</string>
    <string name="conta_compra_de_pacotes">Compra de pacotes:</string>
    <string-array name="conta_pacotes">
        <item >Selecione um pacote.</item>
        <item >10 processos</item>
        <item >25 Processos</item>
        <item >100 Processos</item>
    </string-array>
    <string name="qtd_ilimitada">ILIMITADA</string>
    <string name="mov_documento_vinculado">Documento Vinculado:</string>
    <string name="mov_documento">Documento:</string>
    <string name="btn_download">Download</string>
    <string name="login_primeiro_acesso">Primeiro acesso?</string>
    <string name="login_btn_registrese">Registre-se aqui!</string>
    <string name="reg_bt_cadastrar">Cadastrar</string>
    <string name="btn_esqueci_senha">Esqueceu sua senha?</string>
    <string name="btn_clique_aqui">Clique aqui!</string>
    <string name="processo_npu2">NPU:</string>
    <string name="processo_tribunal2">Tribunal:</string>
    <string name="processo_tipoJuizo2">Tipo de juízo:</string>
    <string name="processo_polo_ativo2">Polo ativo:</string>
    <string name="processo_polo_passivo2">Polo passivo:</string>
    <string name="msg_carregando">Carregando...</string>
</resources>